[metadata]
name = py-moneyed
version = 1.2
description = Provides Currency and Money classes for use in your Python code.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kai
author_email = k@limist.com
maintainer = Dmitry Dygalo
maintainer_email = dadygalo@gmail.com
keywords = money currency class abstraction
license = BSD
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 6 - Mature
    Environment :: Other Environment
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Homepage = http://github.com/py-moneyed/py-moneyed
    Documentation = https://py-moneyed.readthedocs.io/en/latest/

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.6
install_requires =
    babel>=2.8.0
    typing-extensions>=3.7.4.3

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest>=2.3.0
    tox>=1.6.0
type-tests =
    pytest>=2.3.0
    pytest-mypy-plugins
    mypy>=0.812

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 119

[isort]
profile = black

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' -Werror
python_files =
    test_*.py
    *_test.py
    tests.py
testpaths =
    tests
norecursedirs =
    .git
    .tox
    dist
    build
    .mypy_cache

[mypy]
python_version = 3.6
show_error_codes = True
pretty = True
files = src/, tests/

ignore_missing_imports = False
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-tests.test_l10n]
disallow_untyped_defs = False

[mypy-tests.test_moneyed_classes]
ignore_errors = True

[mypy-babel.*]
ignore_missing_imports = True
